// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly call onDone and onClose after submit 1`] = `
<Modal
  contentLabel="webhooks.update"
  onRequestClose={[MockFunction]}
>
  <form
    onSubmit={[Function]}
  >
    <div
      className="modal-head"
    >
      <h2>
        webhooks.update
      </h2>
    </div>
    <div
      className="modal-body"
    >
      <div
        className="modal-field"
      >
        <label
          htmlFor="webhook-name"
        >
          name
          <em
            className="mandatory"
          >
            *
          </em>
        </label>
        <input
          autoFocus={true}
          disabled={true}
          id="webhook-name"
          minLength={2}
          name="name"
          onChange={[Function]}
          required={true}
          type="text"
          value="foo"
        />
      </div>
      <div
        className="modal-field"
      >
        <label
          htmlFor="webhook-url"
        >
          webhooks.url
          <em
            className="mandatory"
          >
            *
          </em>
        </label>
        <input
          disabled={true}
          id="webhook-url"
          name="url"
          onChange={[Function]}
          required={true}
          type="text"
          value="http://foo.bar"
        />
        <div
          className="modal-field-description"
        >
          webhooks.url.description
        </div>
      </div>
    </div>
    <footer
      className="modal-foot"
    >
      <i
        className="spinner spacer-right"
      />
      <button
        disabled={true}
        type="submit"
      >
        update_verb
      </button>
      <button
        className="button-link"
        disabled={true}
        onClick={[Function]}
        type="reset"
      >
        cancel
      </button>
    </footer>
  </form>
</Modal>
`;

exports[`should render correctly when creating a new webhook 1`] = `
<Modal
  contentLabel="webhooks.create"
  onRequestClose={[MockFunction]}
>
  <form
    onSubmit={[Function]}
  >
    <div
      className="modal-head"
    >
      <h2>
        webhooks.create
      </h2>
    </div>
    <div
      className="modal-body"
    >
      <div
        className="modal-field"
      >
        <label
          htmlFor="webhook-name"
        >
          name
          <em
            className="mandatory"
          >
            *
          </em>
        </label>
        <input
          autoFocus={true}
          disabled={false}
          id="webhook-name"
          minLength={2}
          name="name"
          onChange={[Function]}
          required={true}
          type="text"
          value=""
        />
      </div>
      <div
        className="modal-field"
      >
        <label
          htmlFor="webhook-url"
        >
          webhooks.url
          <em
            className="mandatory"
          >
            *
          </em>
        </label>
        <input
          disabled={false}
          id="webhook-url"
          name="url"
          onChange={[Function]}
          required={true}
          type="text"
          value=""
        />
        <div
          className="modal-field-description"
        >
          webhooks.url.description
        </div>
      </div>
    </div>
    <footer
      className="modal-foot"
    >
      <button
        disabled={false}
        type="submit"
      >
        create
      </button>
      <button
        className="button-link"
        disabled={false}
        onClick={[Function]}
        type="reset"
      >
        cancel
      </button>
    </footer>
  </form>
</Modal>
`;

exports[`should render correctly when updating a webhook 1`] = `
<Modal
  contentLabel="webhooks.update"
  onRequestClose={[MockFunction]}
>
  <form
    onSubmit={[Function]}
  >
    <div
      className="modal-head"
    >
      <h2>
        webhooks.update
      </h2>
    </div>
    <div
      className="modal-body"
    >
      <div
        className="modal-field"
      >
        <label
          htmlFor="webhook-name"
        >
          name
          <em
            className="mandatory"
          >
            *
          </em>
        </label>
        <input
          autoFocus={true}
          disabled={false}
          id="webhook-name"
          minLength={2}
          name="name"
          onChange={[Function]}
          required={true}
          type="text"
          value="foo"
        />
      </div>
      <div
        className="modal-field"
      >
        <label
          htmlFor="webhook-url"
        >
          webhooks.url
          <em
            className="mandatory"
          >
            *
          </em>
        </label>
        <input
          disabled={false}
          id="webhook-url"
          name="url"
          onChange={[Function]}
          required={true}
          type="text"
          value="http://foo.bar"
        />
        <div
          className="modal-field-description"
        >
          webhooks.url.description
        </div>
      </div>
    </div>
    <footer
      className="modal-foot"
    >
      <button
        disabled={false}
        type="submit"
      >
        update_verb
      </button>
      <button
        className="button-link"
        disabled={false}
        onClick={[Function]}
        type="reset"
      >
        cancel
      </button>
    </footer>
  </form>
</Modal>
`;
